# ap1

./: .gitignore  .repos  README.md  SETUP.md  ap1.repos  ap1_setup.sh
.github/: CODEOWNERS
scripts/: README.md  perception_setup.sh  realsense_imu_bag_summary.py  software_smoke_test.sh
src/ap1_launch/: package.xml  setup.cfg  setup.py
src/ap1_launch/ap1_launch/: CMakeLists.txt
src/ap1_launch/launch/: ap1.launch.py  full_system.launch.py  pnc_backend.launch.py  system_bringup.launch.py  ui_setup.launch.py
src/ap1_msgs/: CMakeLists.txt
src/ap1_perception/: package.xml  pyproject.toml  setup.cfg  setup.py
src/ap1_perception/ap1_perception/: projection.py  ufld_ground_node.py  yolo_node.py
src/ap1_perception/ap1_perception/ransac/: __init__.py  __main__.py  _plane.py  ground_ransac.py  utils.py
src/ap1_perception/ap1_perception/ufld/: __init__.py  __main__.py  _ufld.py  _ufld_onnx.py  config.py  model.onnx
src/ap1_perception/ap1_perception/yolo/: __init__.py  __main__.py  _yolo.py  yolo11n.onnx
src/ap1_perception/launch/: ufld_ground.launch.py  yolo.launch.py
src/bringup/: package.xml  setup.cfg  setup.py
src/bringup/ap1_bringup/: CMakeLists.txt
src/bringup/launch/: full_system.launch.py  pnc_backend.launch.py  ui_setup.launch.py
