<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ap1_launch</name>
  <version>0.1.0</version>
  <description>AP1 Launcher</description>
  <maintainer email="alyashour1@gmail.com">Aly</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>perception</exec_depend>
  <exec_depend>planning</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>mapping_and_localization</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
