[project]
name = "perception"
version = "0.1.0"
description = "Main repository for perception team code"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "cv-bridge>=1.13.0.post0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "numpy==2.4.2",
    "onnxruntime>=1.24.2",
    "opencv-python>=4.13.0.92",
    "plyfile>=1.1.3",
    "pyqt5>=5.15.11",
    "pyrealsense2>=2.56.5.9235",
    "torch==2.10.0",
    "ultralytics>=8.4.18",
]
